kuber/mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongo-data-claim
      containers:
      - name: mongodb
        image: mongo:6.0.3
        ports:
        - containerPort: 27017 
        volumeMounts:
        - name: mongo-data
          mountPath: /home/mongo/data
        resources:
          limits:
            cpu: 400m
            memory: 768Mi
          requests:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
