kuber/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: cloud-app.local
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-service
              servicePort: 8080
